# Alpha-Solver

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Alpha Solver.py  CHANGELOG.md  CONTRIBUTING.md  ChatGPT-Optimizer-Final.md  Claude-Alpha-Solver-Tool-Registry-Expansion.md  Dockerfile  Makefile  Optimizer-Final-Alpha-Solver-expansion-research.md  README.md  README_ALPHA_SOLVER_CONSTRAINED.md  RELEASE.md  ROADMAP.md  alpha-solver-registry-expansion.md  alpha-solver-v91-python.py  alpha_solver.yaml  alpha_solver_cli.py  alpha_solver_entry.py  alpha_solver_master_table_v0_7_0.xlsx  alpha_solver_portable.py  alpha_solver_v225_p2_experts.py  compass_artifact_wf-4f3d7e6d-fe04-476e-8163-42e17338acfb_text_markdown.md  compass_artifact_wf-58163325-795a-4967-9998-0f82d8862b31_text_markdown.md  compass_artifact_wf-be7a13dd-302c-4524-bb17-a916c55cd819_text_markdown.md  constraints.txt  jsonlines_compat.py  openapi.json  pyproject.toml  pytest.ini  registry_seed_v0_7_0.jsonl  requirements-dev.txt  requirements-test.txt  requirements.txt  speckit  test_alpha_solver_smoke.py  (+1 more)
.devcontainer/: devcontainer.json  last_setup.txt  postCreate.sh
.github/: pull_request_template.md
.spec-templates/: ci_reliability_gate_v1.md  dashboards_pack_v1.md  rag_semantic_cache_v1.md
.specs/: ACTIONS-COST-CONTAINMENT-ALPHA-001.md  ALPHA-ANSWER-STRUCTURE-V2-001.md  ALPHA-BREVITY-CONTROL-001.md  ALPHA-CLARIFY-THRESHOLD-001.md  ALPHA-FORMAT-PRESERVATION-001.md  ALPHA-LIVE-EXPERT-STEP1-PARSE-001.md  ALPHA-PRIMARY-ANSWER-EMPTY-001.md  ALPHA-SIDE-BY-SIDE-EVIDENCE-PACKET-001.md  ALPHA-SOLVER-CALIBRATED-CONFIDENCE-OUTPUT-CONTRACT-001.md  ALPHA-SOLVER-DEF-002-PROVIDER-COST-CAPS-STOP-CONTROL-001.md  ALPHA-SOLVER-DEF-002-V1-SOLVE-AUTH-TENANCY-CLOSURE-001.md  ALPHA-SOLVER-ESCALATION-NEEDS-HUMAN-PROTOCOL-001.md  ALPHA-SOLVER-EVAL-FALSE-PREMISE-PERTURBATION-001.md  ALPHA-SOLVER-EVAL-HIGHER-HEADROOM-CASESET-001.md  ALPHA-SOLVER-LOCAL-MODEL-LAB-OLLAMA-SINGLEPATH-001.md  ALPHA-SOLVER-LOCAL-OPENAI-SMOKE-RUNNER-001.md  ALPHA-SOLVER-MODEL-CATALOG-ROUTING-METADATA-EXPANSION-001.md  ALPHA-SOLVER-NARRATIVE-CLAIM-SAFETY-LINTER-001.md  ALPHA-SOLVER-OPERATOR-RUN-CAPTURE-HARNESS-MVP-001.md  AS-145.md  (+134 more)
clients/python/: README.md  alpha_client.py  pyproject.toml
clients/python/alpha_solver_sdk/: __init__.py
(+4732 files in other folders)
