[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-solver"
version = "1.0.0b1"
description = "Alpha-Solver: deterministic offline-first tool selection & planning"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Alpha Solver Team"}]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.scripts]
alpha-solver = "alpha.cli:main"

[tool.setuptools]
packages = [
    "alpha",
    "alpha.core",
    "alpha.adapters",
    "alpha.executors",
    "alpha.reasoning",
    "scripts",
]

[tool.setuptools.package-data]
alpha = ["**/*.json", "**/*.md"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
py_version = 312
skip = ["artifacts", "telemetry", "logs", "scripts", "tests", ".venv", ".pytest_cache", ".ruff_cache"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "artifacts",
    "telemetry",
    "logs",
    "scripts",
    "tests",
    ".venv",
    ".pytest_cache",
    ".ruff_cache",
    "Alpha Solver.py",
]
lint.select = ["E", "F"]
# Ignore style-only errors; enforce only correctness
lint.ignore = ["E501", "E402", "E401"]

# Tests often use convenience imports and multi-import lines for fixtures/mocks.
# Keep source strict, relax tests to avoid noise blocking CI.
[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["F401", "E401"]

