[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-solver-sdk"
version = "0.1.0"
description = "Python client SDK for Alpha Solver"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["alpha_solver_sdk"]
