[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-solver-sdk"
version = "0.0.0"
description = "Alpha Solver Python SDK"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests"]

[tool.setuptools.packages.find]
where = ["."]
